Setup for an android client now works as intended.

--- a/SmartHome_AndroidClient/app/src/main/res/values/strings.xml
+++ b/SmartHome_AndroidClient/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">SmartHome_Client</string>
     <string name="initiating_security">INITIATING SECURITY</string>
+    <string name="keystore_filename">smarthome_keystore</string>
 </resources>
