Android clients have to write in the ip of the ca server.

--- a/SmartHome_AndroidClient/app/src/main/res/values/strings.xml
+++ b/SmartHome_AndroidClient/app/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
     <string name="app_name">SmartHome_Client</string>
+
+    <string name="sharedPrefs">SmartHomePrefs</string>
+    <string name="CAServerIPAddress">CAServerIPAddress</string>
+
     <string name="initiating_security">INITIATING SECURITY</string>
     <string name="keystore_filename">smarthome_keystore</string>
 </resources>
