--- a/SmartHome_AndroidClient/app/src/main/res/values/strings.xml
+++ b/SmartHome_AndroidClient/app/src/main/res/values/strings.xml
@@ -27,9 +27,10 @@
     <string name="drawer_lists_title">Available lists</string>
     <string name="settings">Settings</string>
     <string name="create_new_list">Create a new list</string>
-    <string name="new_list">New list</string>
+    <string name="list_editor">List editor</string>
     <string name="select_an_icon">Select an icon</string>
     <string name="public_switch">Public</string>
+    <string name="suggestions_switch">Suggestions</string>
     <string name="cancel">Cancel</string>
     <string name="save">Save</string>
     <string name="delete_list">Delete list</string>
